--- a/src/style/chat.css
+++ b/src/style/chat.css
@@ -2,6 +2,22 @@ body {
   background-color: #121e27;
 }
 
+.Main-Chat{
+  display: flex;
+  justify-content:space-between;
+}
+.Room-block{
+  color: black;
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px 10px;
+  width: auto;
+  height: auto;
+  background-color: aqua;
+  position:absolute;
+  z-index: 1;
+  left: 10%;
+}
 .Chat-App {
   display: flex;
   width: 100vh;
